cambie lineas con el creador de la pagina

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-
+</head>
+<body>
   <title>Estudio Unidad y Hermandad los invita a la despededia del año 2023, tambien se invita todos los alumnos a cargo del Instructor 
     MIGUEL SCOTTINO
   </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <a href="https://galvan2010.github.io/despedida2023/"></a> 
+  <img src="imagenes/tannn.jpg" alt="Descripción de la imagen">
+</a>
   <div class="invitation">
     <div class="background-image">
       <div class="content">
@@ -26,9 +30,10 @@
           <div class="text">
             <h2>Los invitamos a la despedida del año 2023
                  Y a la despedida de nuestros alumnos:<br/> YAMI, MELI, JOACO, BENJA</h2>
-            <p>Fecha: 24/11/2023</p>
-            <p>Hora: 21:30</p>
-            <P> LOS ESPERAMOS EN AV 12 N°2572 Entre paseo 125 y 126 Porton negro dice GARBO 2572 </P>
+            <h5>Fecha: 24/11/2023</h5>
+            <h5>Hora: 21:30</h5>
+            <h3>El festejo va a ser a la "CANASTA" Cada flia, alumno llevar lo que vallan a aconsumir comida, bebida<br/>
+               LOS ESPERAMOS EN AV 12 N°2572 Entre paseo 125 y 126 Porton negro dice GARBO</h3>
           </div>
           <title>Botón para el Mapa</title>
           <link rel="stylesheet" href="styles.css">
